Добавлено на стартовое окно возможность выбора активной вахты для выполнения последующей фильтрации некоторых данных

--- a/UpaProject/Views/Journals/Operativs/WindowNewSubj.xaml
+++ b/UpaProject/Views/Journals/Operativs/WindowNewSubj.xaml
@@ -57,7 +57,7 @@
                            Text="Время начала:" 
                            Margin="5" />
                 <TextBox VerticalAlignment="Center"
-                         Text="{Binding TimeStart}"
+                         Text="{Binding TimeStart,ValidatesOnNotifyDataErrors=True}"
                          Style="{StaticResource Txb}"
                          Margin="5"
                          Padding="5,4" 
